[API] 🎨 add counts of urls
